; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_catalog.c_ts_catalog_get_cache_proxy_id.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_catalog.c_ts_catalog_get_cache_proxy_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@InvalidOid = common dso_local global i32 0, align 4
@CACHE_SCHEMA_NAME = common dso_local global i32 0, align 4
@cache_proxy_table_names = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_catalog_get_cache_proxy_id(%struct.TYPE_6__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = call i32 @catalog_is_valid(%struct.TYPE_6__* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %30, label %10

10:                                               ; preds = %2
  %11 = call i32 (...) @IsTransactionState()
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %10
  %14 = load i32, i32* @InvalidOid, align 4
  store i32 %14, i32* %3, align 4
  br label %38

15:                                               ; preds = %10
  %16 = load i32, i32* @CACHE_SCHEMA_NAME, align 4
  %17 = call i32 @get_namespace_oid(i32 %16, i32 1)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @OidIsValid(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %15
  %22 = load i32, i32* @InvalidOid, align 4
  store i32 %22, i32* %3, align 4
  br label %38

23:                                               ; preds = %15
  %24 = load i32*, i32** @cache_proxy_table_names, align 8
  %25 = load i64, i64* %5, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @get_relname_relid(i32 %27, i32 %28)
  store i32 %29, i32* %3, align 4
  br label %38

30:                                               ; preds = %2
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %32, align 8
  %34 = load i64, i64* %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %30, %23, %21, %13
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @catalog_is_valid(%struct.TYPE_6__*) #1

declare dso_local i32 @IsTransactionState(...) #1

declare dso_local i32 @get_namespace_oid(i32, i32) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @get_relname_relid(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
